<resources>
    <string name="app_name">Finance Pro</string>
    <string name="email">nirvaysofttech@gmail.com</string>
    <string name="admob_square_ad_unit">ca-app-pub-1055364350114509/3265553431</string>
    <string name="admob_banner_ad_unit">ca-app-pub-1055364350114509/5317550441</string>
    <string name="slogan_text">Smart Solutions for Every Finance Need</string>
    <string name="settings">Settings</string>
    <string name="share">Send to Friends</string>
    <string name="rate">Rate &amp; Review</string>
    <string name="more">Check Out More Apps</string>
    <string name="share_message">Install %1$s Smart Solutions for Every Finance Need.\n\n%s</string>
    <string name="btncalculate">CALCULATE</string>
    <string name="btnclear">CLEAR</string>
    <string name="btnsavecalculation">Save This</string>
    <string name="btnsharecalculation">Share This</string>
    <string name="btnbankinterest">SEARCH (%)</string>
    <string name="btnRadioReturn">Return</string>
    <string name="btnRadioGrowth">Growth</string>
    <string name="color_scheme_text">Color Scheme</string>
    <string name="language_text">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_hindi">Hindi</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="aboutUs">About Us</string>
    <string name="contact">Contact</string>
    <string-array name="dropdown_subjectContact">
        <item>Select Subject</item>
        <item>Suggestion</item>
        <item>Improvement</item>
        <item>Sponsorship</item>
        <item>Help</item>
        <item>Issue</item>
        <item>Queries</item>
        <item>Appriciation</item>
        <item>Other</item>
    </string-array>
    <string name="contactDiaNote">Note: You can send me sponsorship requests, suggestions, or ask for help using this contact form.</string>
    <string name="system_default">System (Default)</string>
    <string name="version_num">1.0.0+20241222</string>
    <string name="ok">OK</string>
    <string name="App">App</string>
    <string name="About">About</string>
    <string name="developedby">Developed by</string>
    <string name="DeveloperName">Nirvay Soft Tech</string>
    <string name="App_Language">App Language</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="buttonSend">Send</string>
    <string name="seggestionName">Type Your Name</string>
    <string name="seggestionMessage">Type Your Message</string>
    <string name="nav_open">Menu</string>
    <string name="nav_close">Back</string>
    <string name="arrow_down">Expand</string>
    <string name="arrow_up">Collapse</string>
    <string-array name="year_options">
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
        <item>5 Years</item>
    </string-array>
    <string-array name="ageGroupDropdown">
        <item>Adult (Below 60 Years)</item>
        <item>Senior Citizen (60 Years and Above)</item>
    </string-array>
    <string-array name="selectBankDropdown">
        <item>AU Small Finance Bank</item>
        <item>Axis Bank</item>
        <item>Bandhan Bank</item>
        <item>Bank of Baroda</item>
        <item>Bank of India</item>
        <item>Bank of Maharashtra</item>
        <item>Canara Bank</item>
        <item>Capital Small Finance Bank</item>
        <item>Central Bank of India</item>
        <item>City Union Bank</item>
        <item>CSB Bank</item>
        <item>DCB Bank</item>
        <item>Dhanlaxmi Bank</item>
        <item>Equitas Small Finance Bank</item>
        <item>ESAF Small Finance Bank</item>
        <item>Federal Bank</item>
        <item>HDFC Bank</item>
        <item>ICICI Bank</item>
        <item>IDBI Bank</item>
        <item>IDFC FIRST Bank</item>
        <item>Indian Bank</item>
        <item>Indian Overseas Bank</item>
        <item>IndusInd Bank</item>
        <item>Jammu &amp; Kashmir Bank</item>
        <item>Jana Small Finance Bank</item>
        <item>Karur Vysya Bank</item>
        <item>Karnataka Bank</item>
        <item>Kotak Mahindra Bank</item>
        <item>Nainital Bank</item>
        <item>North East Small Finance Bank</item>
        <item>Punjab &amp; Sind Bank</item>
        <item>Punjab National Bank</item>
        <item>RBL Bank</item>
        <item>South Indian Bank</item>
        <item>Shivalik Small Finance Bank</item>
        <item>State Bank of India</item>
        <item>Suryoday Small Finance Bank</item>
        <item>Tamilnad Mercantile Bank</item>
        <item>Union Bank of India</item>
        <item>UCO Bank</item>
        <item>Ujjivan Small Finance Bank</item>
        <item>Unity Small Finance Bank</item>
        <item>YES Bank</item>
        <item>Utkarsh Small Finance Bank</item>
    </string-array>
    <string name="notes_heading">Important Notes:</string>
    <string name="note_effective_date">1. The following interest rates are effective from 19 April 2025.</string>
    <string name="note_amount_limit">2. The following rates apply to deposits below ₹3 Crore.</string>
    <string name="note_min_tenure">3. Minimum deposit tenure is 7 days for most banks.</string>
    <string name="note_tax">4. Interest earned is taxable as per your income slab</string>
    <string name="ShareRatesAsPDF">Share Rates as PDF</string>
    <string name="Rs">Rs.</string>
    <string name="percentageSymbol">%</string>
    <string name="EmpCTC">Cost to Company (CTC)</string>
    <string name="EmpCTC_alert">Please enter your CTC.</string>
    <string name="EmpCTC_zero_alert">CTC amount cannot be zero.ं</string>
    <string name="EmpCTC_invalid_alert">Please enter valid CTC.</string>
    <string name="EmpBonus">Bonus Included in CTC (Optional)</string>
    <string name="BonusAmt_zero_alert">Bonus amount cannot be zero.</string>
    <string name="BonusPer_zero_alert">Bonus Percentage cannot be zero.</string>
    <string name="bonus_req_alert">Bonus field is mandatory when checked.</string>
    <string name="bonus_invalid_alert">Please enter a valid bonus value.</string>
    <string name="EmpAmount">Bonus Amount (Rs.)</string>
    <string name="EmpPercentage">Bonus Percentage (%)</string>
    <string name="Emp_Bonus_Percentage_alert">Bonus Percentage (%) must not exceed 100%.</string>
    <string name="EmpMomthlyTax">Monthly Professional Tax</string>
    <string name="monthly_tax_req_alert">Monthly Professional Tax is mandatory.</string>
    <string name="monthly_tax_invalid_alert">Please enter a valid Monthly Professional Tax value.</string>
    <string name="EmpMonthlyEmployerPF">Monthly Employer PF</string>
    <string name="employer_pf_req_alert">Monthly Employer PF is mandatory.</string>
    <string name="employer_pf_invalid_alert">Please enter a valid Monthly Employer PF value.</string>
    <string name="EmpMonthlyEmployeePF">Monthly Employee PF</string>
    <string name="EmpMonthlyEmployeePF_req_alert">Monthly Employee PF is mandatory.</string>
    <string name="EmpMonthlyEmployeePF_invalid_alert">Please enter a valid Monthly Employee PF value.</string>
    <string name="EmpMonthlyAddiDiduction">Monthly Additional Deduction</string>
    <string name="EmpMonthlyAddiDiductionOptional">(Optional)</string>
    <string name="EmpMonthlyAddiDiduction1">Monthly Additional Deduction 1 (Optional)</string>
    <string name="EmpMonthlyAddiDiduction2">Monthly Additional Deduction 2 (Optional)</string>
    <string name="EmpMonthlyAddDiductionError">Maximum 5 deductions allowed</string>
    <string name="AddDeductionBtn">ADD DEDUCTION</string>
    <string name="SalarySummeryHed">Salary Summary</string>
    <string name="SalarySummeryTotalMonthlyDeduction">Total Monthly Deductions</string>
    <string name="SalarySummeryTotalAnnualDeductions">Total Annual Deductions</string>
    <string name="SalarySummeryTakeHomeMonthlySalary">Take Home Monthly Salary</string>
    <string name="SalarySummeryTakeHomeAnnualSalary">Take Home Annual Salary</string>
    <string name="empSalaryChartIndication1">Monthly Ded.</string>
    <string name="empSalaryChartIndication2">Annual Ded.</string>
    <string name="empSalaryChartIndication3">Monthly Salary</string>
    <string name="empSalaryChartIndication4">Annual Salary</string>
    <string-array name="term_options">
        <item>Years</item>
        <item>Months</item>
    </string-array>
    <string-array name="term_options_for_fd">
        <item>Years</item>
        <item>Months</item>
        <item>Days</item>
    </string-array>
    <string-array name="interestRecievedDropdownOption">
        <item>Monthly</item>
        <item>Quarterly</item>
    </string-array>
    <string-array name="simpleLoanDropdownOption">
        <item>Monthly Repayment (EMI)</item>
        <item>Loan Amount</item>
        <item>Annual Interest Rate (%)</item>
        <item>Loan Term</item>

    </string-array>
    <string name="empSalary">Employee Salary</string>
    <string name="empSalaryTab">SALARY</string>
    <string name="empSalaryChartTab">SALARY CHART</string>
    <string name="empSalaryIncrement">Employee Salary Increment</string>
    <string name="empSalaryIncrementtab1">INCREMENT</string>
    <string name="empSalaryIncrementtab2">INCREMENT CHART</string>
    <string name="EmpAmountRadio">Find Amount (Rs.)</string>
    <string name="EmpPercentageRadio">Find Percentage (%)</string>
    <string name="empIncrementAmount">Increment Amount</string>
    <string name="empIncrementPercent">Increment Percentage (%)</string>
    <string name="empIncrementPercentageEmpty">Please enter your Increment Percentage (%).</string>
    <string name="empIncrementPercentageZero">Increment Percentage (%) cannot be zero.</string>
    <string name="empIncrementPercentageInvalid">Please enter a valid Increment Percentage (%).</string>
    <string name="empIncrementPercentageExceed">Increment Percentage (%) must not exceed 100%.</string>
    <string name="empIncrementAmtEmpty">Please enter your Increment Amount (Rs).</string>
    <string name="empIncrementAmtZero">Increment Amount (Rs) cannot be zero.</string>
    <string name="empIncrementAmtInvalid">Please enter a valid Increment Amount (Rs).</string>
    <string name="empIncrementChartIndicator1">Current CTC</string>
    <string name="empIncrementChartIndicator2">Monthly Increment Amt</string>
    <string name="empIncrementChartIndicator3">Annual Increment Amt</string>
    <string name="empIncrementChartIndicator4">New CTC</string>
    <string name="IncrementSummeryNewCTCAfterIncrementHeading">New CTC after Increment</string>
    <string name="IncrementSummeryHeding">Increment Summary</string>
    <string name="premium_title">Upgrade to Premium</string>
    <string name="premium_subtitle">Remove ads</string>
    <string name="premium_benefits">Premium Benefits</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="premium_price"><strike>₹99/month</strike>  <b>₹249 for lifetime</b></string>
    <string name="restore_subscription">Restore Subscription</string>
    <string name="about_us">About Us</string>
    <string name="version">Version %s</string>
    <string name="copyright">© 2025 All rights reserved.</string>
    <string name="about_message">Hello,\n\nThank you from the bottom of our hearts for choosing this app. It\'s more than just a download — it’s a bond of trust, and we’re truly grateful for it.\n\nWe’re a small team with a big heart, building each calculator with love, care, and the hope that it makes your day a little easier and your financial journey a little brighter.\n\nWe believe that small steps lead to big changes, and if this app can save you time, bring you clarity, or reduce your stress — then our mission is fulfilled.</string>
    <string name="we_value_feedback">Got a question? A thought? Or just want to say hello? We’d love to hear from you. You’re not just a user to us — you’re part of our story.</string>
    <string name="email_heading">Reach out to us</string>
</resources>