<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/wndowBgScreen"
    android:orientation="vertical"
    android:padding="18dp">

    <!-- Heading TextView -->
    <TextView
        android:id="@+id/text_color_scheme_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_scheme_text"
        android:textSize="19sp"
        style="@style/textColor"
        android:fontFamily="@font/bold"
        android:layout_marginTop="6dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/radio_group_color_scheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_default"
            android:textSize="13.5dp"
            android:padding="10dp"
            android:fontFamily="@font/regular"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/light"
            android:padding="10dp"
            android:textSize="13.5dp"/>

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/dark"
            android:padding="10dp"
            android:textSize="13.5dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:fontFamily="@font/bold"
        style="@style/textColor"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackground" />
</LinearLayout>
