<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/wndowBgScreen"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    android:paddingBottom="8dp">

    <!-- Heading TextView -->
    <TextView
        android:id="@+id/text_color_scheme_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="20sp"
        style="@style/textColor"
        android:fontFamily="@font/bold"
        android:layout_marginTop="6dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/selected_theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        style="@style/selectedTextColor"
        android:text="@string/contactDiaNote"
        android:textColor="@color/red"
        android:fontFamily="@font/regular"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/suggestionName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:hint="@string/seggestionName"
            android:maxLength="20" />

        <Spinner
            android:id="@+id/mailSubject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:spinnerMode="dropdown"
            android:entries="@array/dropdown_subjectContact"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/suggestionMessage"
        android:lines="4"
        android:hint="@string/seggestionMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="1000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center_vertical">

        <TextView
            android:id="@+id/characterCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1000 characters remaining"
            android:textSize="12sp"
            android:layout_gravity="top"
            android:textColor="#757575"
            android:paddingStart="4dp" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSend"
            android:textSize="15sp"
            android:fontFamily="@font/bold"
            style="@style/textColor"
            android:background="?attr/selectableItemBackground" />
    </LinearLayout>

</LinearLayout>
